Fix buttons on firefox

--- a/media/2011/css/main.css
+++ b/media/2011/css/main.css
@@ -226,6 +226,7 @@ article p a {
     -webkit-appearance: none;
     -moz-appearance: none;
     -o-appearance: none;
+    appearance: none;
     height: 38px;
     color: #f5f;
     border-radius: 0;
@@ -380,7 +381,7 @@ article p a {
         border: 2px solid #222;
         position: absolute;
         right: 0;
-        top: -5px;
+        top: -3px;
         z-index: 100;
         background: #222;
         pointer-events: none;
